<resources>
	<string name="app_name"
	        translatable="false">Greak</string>
	<string name="zero"
	        translatable="false">0</string>
	<string name="read">Read</string>
	<string name="subscribe">Subscribe | $4.99</string>
	<string name="trending">Trending</string>
	<string name="channel">Channel</string>
	<string name="followed">Followed</string>
	<string name="unsubscribe">Unsubscribe</string>
	<string name="categories">Categories</string>
	<string name="reading_time">%d min. reading time</string>
	<string name="post_count">Posts:</string>
	<string name="followers">Followers:</string>
	<string name="login_to_see_followed_users">Login to see followed users</string>
	<string name="this_function_is_available_after_login">This function is available after login</string>
	<string name="no_followed_users_yet">No followed users yet</string>
	<string name="follow_something">Follow channels, to see here newest author posts</string>
	<string name="refresh">Refresh</string>
	<string name="follow">Follow</string>
	<string name="cancel">Cancel</string>
	<string name="error_operation_failed">Operation failed</string>
	<string name="account_required_login">To perform this action, please login..</string>
	<string name="no_favorites_yet">No favorites yet</string>
	<string name="like_something">Like something to see posts here</string>
	<string name="unfollow">Unfollow</string>
	<string name="password">Password</string>
	<string name="sign_up">Sign up</string>
	<string name="email"
	        translatable="false">Email</string>
	<string name="sign_in_with_email">Sign in with email</string>
	<string name="sign_in">Sign in</string>
	<string name="username">Username</string>
	<string name="or">Or</string>
	<string
		name="accept_terms"><![CDATA[By registering user accepts <a href=\"https://link.io/terms\">Terms of use
	</a> and <a href=\"https://link.io/privacy-policy\">Privacy Policy</a>.]]></string>
	<string name="text_size">Text size in Post</string>
	<string name="notifications">Notifications</string>
	<string name="my_votes">My votes</string>
	<string name="logout">Logout</string>
	<string name="default_font_size"
	        translatable="false">13</string>
	<string name="profile">Profile</string>
	<string name="not_logged">Not logged</string>
	<string name="sign_out">Sign out</string>
	<string name="terms_must_be_accepted">Terms must be accepted</string>
	<string name="new_list">New</string>
	<string name="not_ready_yet">Not ready yet</string>
	<string name="logged_in_successfully">Logged In successfully</string>
	<string name="failed_to_login">Failed to login</string>
	<string name="logging_in_footer">We care about your data security and we, as Greak developers don\'t use your
		password in any way.
		\n\nTo ensure that, the app is not obfuscated, so you can verify that by unzipping and checking it\'s code.
		\n\nAdditionally, this project is open sourced and available on
		<a href="https://github.com/filippkowalski/greak">Greak GitHub</a>.</string>
</resources>
