<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/container_layout"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<android.support.v4.widget.SwipeRefreshLayout
		android:id="@+id/layout_swipe_refresh"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<android.support.v7.widget.RecyclerView
			android:id="@+id/recycler_view"
			android:layout_width="match_parent"
			android:layout_height="match_parent"/>

	</android.support.v4.widget.SwipeRefreshLayout>

</android.support.design.widget.CoordinatorLayout>