<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:gravity="center"
	android:orientation="vertical"
	android:padding="24dp">

	<EditText
		android:id="@+id/edit_login_username"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="@string/username"
		android:inputType="textEmailAddress"/>

	<EditText
		android:id="@+id/edit_login_password"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:visibility="gone"
		android:hint="@string/password"
		android:inputType="textPassword"/>

	<TextView
		android:id="@+id/text_login_footer"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="12dp"
		android:visibility="gone"
		android:lineSpacingExtra="4dp"
		android:text="@string/logging_in_footer"/>

</LinearLayout>